--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -24,9 +24,9 @@
     &--temp {
       align-items: center;
       display: flex;
+      font-size: 4rem;
       grid-area: 1 / 2 / 2 / 3;
       justify-content: center;
-      font-size: 4rem;
     }
 
     &--locationName {
@@ -47,7 +47,7 @@
       padding-right: 10px;
 
       & > *:first-child {
-        margin-right: 20px; // TODO doesnt work
+        margin-right: 20px;
       }
     }
   }
@@ -81,8 +81,7 @@
       }
 
       &--noWrap {
-        // TODO uncomment and check for difference
-        // white-space: nowrap;
+        white-space: nowrap;
       }
     }
   }
