--- a/src/app/part/part.component.scss
+++ b/src/app/part/part.component.scss
@@ -8,16 +8,29 @@
   display: flex;
   flex-direction: column;
   font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  justify-content: space-between;
+  padding: 0;
 
   &__input {
     max-width: 350px;
+    padding: 30px 30px 0;
   }
 
   &__info {
     margin: 15px 0;
   }
 
+  &__buttonGroup {
+    margin-bottom: 10px;
+    overflow-y: auto;
+    padding: 0 20px;
+  }
+
   &__button {
     max-width: 250px;
+  }
+
+  &__footer {
+    min-width: 100%;
   }
 }
