--- a/src/app/lucas/lucas.component.scss
+++ b/src/app/lucas/lucas.component.scss
@@ -15,12 +15,17 @@ $selectionColor: rgba(151, 0, 0, 0.8);
   justify-content: center;
   position: relative;
 
-  &__letters {
+  &__info {
     background: $textBackgroundColor;
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px 25px;
+    text-align: center;
     z-index: 2;
+
+    & *::selection {
+      background: $selectionColor;
+    }
   }
 
   &__letter {
@@ -28,10 +33,6 @@ $selectionColor: rgba(151, 0, 0, 0.8);
     font-family: sans-serif;
     font-size: 4.5rem;
     font-weight: bold;
-
-    &::selection {
-      background: $selectionColor;
-    }
   }
   
   &__notTriggered {
@@ -40,6 +41,10 @@ $selectionColor: rgba(151, 0, 0, 0.8);
   
   &__triggered {
     animation: fadeIn 0.5s ease;
+  }
+
+  &__buttons {
+    margin: 15px 0 5px;
   }
 
   &__canvas {
