--- a/src/app/lucas/lucas.component.html
+++ b/src/app/lucas/lucas.component.html
@@ -1,27 +1,34 @@
 <div class="lucas">
   <div class="lucas__info">
-    <div (click)="animateLetters()">
+    <div
+      (click)="animateLetters()"
+      class="lucas__title">
       <span
         *ngFor="let letter of mapLettersToHTML(); let i = index"
         [innerHTML]="letter"
-        [ngClass]="isTriggeredClass(i)"
-        class="lucas__letter">
+        [ngClass]="isTriggeredClass(i)">
       </span>
     </div>
-    <div>
+    <div class="lucas__about">
       Wireless Network Delivery Analyst | Infrastructure and Platform Services Operations
     </div>
-    <div>
+    <div class="lucas__about">
       Information Technology Services
     </div>
-    <div>
+    <div class="lucas__about">
       California Polytechnic State University, San Luis Obispo
     </div>
     <div class="lucas__buttons btn-group">
       <a
+        routerLink="resume"
+        class="btn btn-dark"
+        role="button">
+        Resume
+      </a>
+      <a
         *ngFor="let button of buttons"
-        [href]="button.link"
-        target='_blank'
+        [href]="button.href"
+        [target]="button.target"
         rel='noopener noreferrer'
         class="btn btn-dark"
         role="button">
