--- a/src/app/lucas/lucas.component.scss
+++ b/src/app/lucas/lucas.component.scss
@@ -28,19 +28,19 @@ $selectionColor: rgba(151, 0, 0, 0.8);
     }
   }
 
-  &__letter {
+  &__title {
     color: $textColor;
     font-family: sans-serif;
     font-size: 4.5rem;
     font-weight: bold;
-  }
-  
-  &__notTriggered {
-    opacity: 0;
-  }
-  
-  &__triggered {
-    animation: fadeIn 0.5s ease;
+
+    &--notTriggered {
+      opacity: 0;
+    }
+
+    &--triggered {
+      animation: fadeIn 0.5s ease;
+    }
   }
 
   &__buttons {
@@ -61,4 +61,30 @@ $selectionColor: rgba(151, 0, 0, 0.8);
 @keyframes fadeIn {
   0% { opacity: 0; }
   100% { opacity: 1; }
+}
+
+@media screen and (max-width: 550px) {
+  .lucas {
+    padding: 0;
+
+    &__info {
+      max-width: 95%;
+      padding: 12px;
+    }
+
+    &__title {
+      font-size: 2.2rem;
+    }
+
+    &__about {
+      font-size: 1.2rem;
+      line-height: 1.25;
+      margin-bottom: 12px;
+    }
+
+    &__buttons {
+      max-width: 100%;
+      overflow-x: auto;
+    }
+  }
 }
